--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.4.3",
+    "typescript": "^5.0.4"
   }
 }
