--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@next/font": "^13.4.4",
     "autoprefixer": "10.4.14",
-    "next": "13.4.4",
+    "discord": "^0.8.2",
+    "next": "^13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
