--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "autoprefixer": "10.4.14",
     "discord": "^0.8.2",
     "next": "^13.4.4",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18.2.4",
     "eslint": "^8.41.0",
     "eslint-config-next": "^13.4.4",
+    "prisma": "^4.15.0",
     "ts-loader": "^9.4.3",
     "typescript": "^5.0.4"
   }
